Commit_9 Fixed the a tag to visit repositery and added a flex-wrap

--- a/src/app/input/input.component.css
+++ b/src/app/input/input.component.css
@@ -1,6 +1,7 @@
 .container-fluid{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap ;
     justify-content: space-evenly;
     font-family: cursive ;
 }
